Tiny fixes to styling
- Fixed style of footer element so links have a little more space at
the top
- Increased padding on bottom of Home post-list element so that bottom
of post list doesn’t get cut off

--- a/src/app/footer.component.css
+++ b/src/app/footer.component.css
@@ -9,7 +9,7 @@
     color: #fff;
     text-decoration: none;
     font-size: 25px;
-    padding: 0 10px 20px 10px;
+    padding: 10px;
 }
 .center-container {
 	display: -webkit-flexbox;
